--- a/server/master/package.json
+++ b/server/master/package.json
@@ -9,6 +9,7 @@
   "author": "Volkan Ozcelik",
   "license": "MIT",
   "dependencies": {
-    "ws": "~0.4.31"
+    "ws": "~0.4.31",
+    "websocket": "~1.0.8"
   }
 }
